# widget

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  stage-docker-compose.yml  test-docker-compose.yml
.github/workflows/: deploy.yml  (+1 more)
services/back/: Dockerfile  README  pyproject.toml  requirements.txt  script.py
services/back/scripts/: app.sh
services/back/src/: .env  auth.py  config.py  database.py  exceptions.py  main.py  seats.py
services/back/src/dao/: BaseDAO.py  FitnesDAO.py  FitnessBusyFictitiousUsersDAO.py  FitnessFictitiousUsersDAO.py  FitnessPromocodeDAO.py  FitnessSeatsDAO.py  FitnessTariffsDAO.py  FitnessUkassaDAO.py  FitnessUkassaProcessingDAO.py  UsersDAO.py
services/back/src/migrations/: README.md  env.py
services/back/src/migrations/versions/: 398b7b364c83_add_column_is_base_to_fitness_tariff_.py  42477e011250_add_fitness_busy_fictitious_users.py  436fc4d3adf8_add_metrica_code.py  489b5050018f_add_column_seats_to_fitness_ukassa_.py  4b1d1eba490d_update_fitenss_ukassa_table.py  86b1a541b9a2_add_table_fitness_seats.py  903dc258ddf4_update_tariffs_table.py  928418862f32_add_fitness_busy_fictitious_users.py  9aec408ea1ca_delete_and_add_columns_to_fitness_.py  (+9 more)
services/back/src/models/: UserModel.py
services/back/src/routers/: AuthRouter.py  FitnesConfigRouter.py  FitnesRouter.py  FitnessAuthRouter.py  FitnessPromocodeRouter.py  UserRouter.py  booking.py  catalog.py  group_classes.py
services/back/src/schemas/: SAccessToken.py  SUkassaPayment.py  SUser.py
services/back/src/services/: ResponseLogger.py  Ukassa.py
(+244 files in other folders)
